src/kubernetes/newsapp-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsapp
  labels:
    app: newsapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: newsapp
  template:
    metadata:
      labels:
        app: newsapp
    spec:
      containers:
        - name: newsapp
          image: asia.gcr.io/newsapp-273606/newsappjdk@sha256:037f4b0d43a8f40aa31cee4ba2c18042669fc8aec281da2ff520186407108a2c
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
