src/kubernetes/newsapp-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
   - name: http
     port: 80
     targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: asia.gcr.io/newsapp-273606/newsappnginx@sha256:6273cb9af2a4f7d3b19d50611df0603b1a0f3d02f5978e2a1e76bfce5a5a1668
        imagePullPolicy: Always
        ports:
          - containerPort: 80
