src/kubernetes/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      name: redis
  clusterIP: None
  selector:
    app: redis

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  labels:
    app: redis
spec:
  serviceName: "redis"
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: asia.gcr.io/newsapp-273606/newsappredis@sha256:5fcf2757437e6cd9edd698139b6138b6cd6f12c36d4bd76ec9fbf7077d45cc96
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
